<resources>
    <string name="app_name">URLSanitizer</string>
    <string name="desc">This app tries to cleanup URLs with GET query that tracks users, tap on the floating button to check saved rules.</string>
    <string name="txt_entry_list">Tap on the query text to remove entry, tap on this text to reset</string>
    <string name="txt_new_entry_hint">Enter GET query key</string>
    <string name="btn_add">Add Entry</string>
    <string name="btn_clipboard">Sanitize clipboard</string>
    <string name="noti_saved">Saved</string>
    <string name="noti_added">Added</string>
    <string name="noti_dup">The entry already exists</string>
    <string name="txt_icon_credit" translatable="false">App icon made by Smashicons from Flaticon</string>
    <string name="unshortening">Handling short URL, this may take a few secs...</string>
    <string name="unshorten_err">An error occurred when unshortening the URL.</string>
    <string name="clipboard_err">Error handling data from clipboard, is it empty?</string>
    <string name="clipboard_sanitized">Url in clipboard is now sanitized :)</string>
    <string name="txt_entry_list_pre_reset">Tap again to reset entries to default ones</string>
    <string name="txt_entry_list_reset_done">Entries are reset to default ones, please reenter this page manually</string>
    <string name="btn_eximport">Export / Import</string>
    <string name="btn_export">Export rules</string>
    <string name="btn_import">Import rules</string>
    <string name="txt_import_note">Note: import will overwrite all the current rules!</string>
    <string name="btn_privacy_redirect">Privacy Redirect</string>
    <string name="sw_privacy_redirect_enable">Enable privacy redirects</string>
    <string name="sw_redirect_youtube">Redirect YouTube links</string>
    <string name="txt_hint_invidious">Domain of Invidious instance</string>
    <string name="sw_redirect_twitter">Redirect Twitter links</string>
    <string name="txt_hint_nitter">Domain of Nitter instance</string>
    <string name="sw_redirect_reddit">Redirect Reddit links</string>
    <string name="txt_hint_reddit">Domain of Libreddit/Teddit instance</string>
    <string name="sw_redirect_instagram">Redirect Instagram links</string>
    <string name="txt_hint_instagram">Domain of Bibliogram instance</string>
    <string name="sw_redirect_moptt">Redirect MoPTT links to ptt.cc</string>
    <string name="sw_redirect_pixiv">Redirect Pixiv links to pixiv.cat</string>
    <string name="sw_redirect_twimg">Redirect Twitter image links for best quality</string>
</resources>